--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,35 @@
 {
     "compilerOptions": {
-      "allowJs": true,
-      "allowSyntheticDefaultImports": true,
-      "esModuleInterop": true,
-      "isolatedModules": true,
-      "jsx": "react",
-      "lib": ["es6"],
-      "moduleResolution": "node",
-      "noEmit": true,
-      "strict": false,
-      "noImplicitAny": false,
-      "target": "esnext",
-      "skipLibCheck": true,
-  
-      "typeRoots": [".src/types", "./node_modules/@types"],
-      "baseUrl": "./",
-      "paths": {
-        "@src/*": ["src/*"]
-      }
+        "allowJs": true,
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
+        "isolatedModules": true,
+        "jsx": "react",
+        "lib": [
+            "es6"
+        ],
+        "moduleResolution": "node",
+        "noEmit": true,
+        "strict": false,
+        "noImplicitAny": false,
+        "target": "esnext",
+        "skipLibCheck": true,
+        "typeRoots": [
+            ".src/types",
+            "./node_modules/@types"
+        ],
+        "baseUrl": "./",
+        "paths": {
+            "@src/*": [
+                "src/*"
+            ]
+        }
     },
     "exclude": [
-      "node_modules",
-      "babel.config.js",
-      "metro.config.js",
-      "jest.config.js",
-      "types"
+        "node_modules",
+        "babel.config.js",
+        "metro.config.js",
+        "jest.config.js",
+        "types"
     ]
-  }
-  
+}
